version/0.1/_sources/examples/preprocessor/doc_example_uhc.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/preprocessor/doc_example_uhc.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_preprocessor_doc_example_uhc.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_preprocessor_doc_example_uhc.py:


UHC example
--------------------
This example shows how to compute universal heart coordinate for ventricles.

.. GENERATED FROM PYTHON SOURCE LINES 8-12

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, model, and ls-dyna executable (uses DEV-104373-g6d20c20aee).

.. GENERATED FROM PYTHON SOURCE LINES 12-44

.. code-block:: default



    import copy
    import os
    from pathlib import Path

    import ansys.heart.preprocessor.models as models
    from ansys.heart.simulator.simulator import BaseSimulator, DynaSettings
    import pyvista as pv

    # set working directory and path to model.
    workdir = Path(
        Path(__file__).resolve().parents[2], "downloads", "Strocchi2020", "01", "FourChamber"
    )

    path_to_model = os.path.join(workdir, "heart_model.pickle")

    if not os.path.isfile(path_to_model):
        raise FileExistsError(f"{path_to_model} not found")

    # specify LS-DYNA path
    lsdyna_path = r"ls-dyna_smp"

    if not os.path.isfile(lsdyna_path):
        raise FileExistsError(f"{lsdyna_path} not found.")

    # load heart model.
    model: models.FourChamber = models.HeartModel.load_model(path_to_model)

    # set base working directory
    model.info.workdir = str(workdir)


.. GENERATED FROM PYTHON SOURCE LINES 49-52

Instantiate the simulator object
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
instantiate simulator. Change options where necessary.

.. GENERATED FROM PYTHON SOURCE LINES 52-66

.. code-block:: default


    # instantaiate dyna settings of choice
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path,
        dynatype="smp",
        num_cpus=1,
    )

    simulator = BaseSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "simulation"),
    )


.. GENERATED FROM PYTHON SOURCE LINES 67-70

Compute UHC
~~~~~~~~~~~
Compute UHC using Laplace Dirichlet method.

.. GENERATED FROM PYTHON SOURCE LINES 70-73

.. code-block:: default


    simulator.compute_uhc()


.. GENERATED FROM PYTHON SOURCE LINES 74-79

.. note::
   There are several definitions for UHC (see https://github.com/KIT-IBT/Cobiveco).
   Here, a simple approach is taken and the
   Dirichlet conditions are shown below. At rotational direction, the start (pi), end (-pi)
   and middle (0) points are defined from four-cavity long axis cut view.

.. GENERATED FROM PYTHON SOURCE LINES 81-84

.. image:: /_static/images/uvc_bc.png
  :width: 600pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 86-88

Visualization of UVCs
~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 88-103

.. code-block:: default


    data_ventricles = pv.read(os.path.join(workdir, "simulation", "uvc", "uvc.vtk"))

    plotter = pv.Plotter(shape=(1, 3))

    plotter.subplot(0, 0)
    plotter.add_mesh(data_ventricles, scalars="apico-basal")

    plotter.subplot(0, 1)
    plotter.add_mesh(copy.copy(data_ventricles), scalars="transmural")

    plotter.subplot(0, 2)
    plotter.add_mesh(copy.copy(data_ventricles), scalars="rotational")
    plotter.show()


.. GENERATED FROM PYTHON SOURCE LINES 104-107

.. image:: /_static/images/uvc_result.png
  :width: 600pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 109-111

Assign data to full model
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 111-117

.. code-block:: default


    # UVC is assigned back to full model automatically
    # Atrial points are with NaN
    model.mesh.set_active_scalars("apico-basal")
    model.mesh.plot()


.. GENERATED FROM PYTHON SOURCE LINES 118-121

.. image:: /_static/images/uvc_assign.png
  :width: 600pt
  :align: center


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.000 seconds)


.. _sphx_glr_download_examples_preprocessor_doc_example_uhc.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_example_uhc.py <doc_example_uhc.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_example_uhc.ipynb <doc_example_uhc.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
