version/0.4/_sources/examples/preprocessor/doc_example_uhc.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/preprocessor/doc_example_uhc.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_preprocessor_doc_example_uhc.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_preprocessor_doc_example_uhc.py:


UHC example
--------------------
This example shows how to compute universal heart coordinates (UHC) for
the ventricles.

.. GENERATED FROM PYTHON SOURCE LINES 32-36

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, model, and ls-dyna executable (uses DEV-104373-g6d20c20aee).

.. GENERATED FROM PYTHON SOURCE LINES 36-65

.. code-block:: default



    import copy
    import os

    import pyvista as pv

    import ansys.heart.preprocessor.models as models
    from ansys.heart.simulator.simulator import BaseSimulator, DynaSettings

    # specify the path to the working directory and heart model
    workdir = os.path.join("pyansys-heart", "downloads", "Strocchi2020", "01", "FourChamber")


    path_to_model = os.path.join(workdir, "heart_model.vtu")

    # specify LS-DYNA path
    lsdyna_path = r"ls-dyna_smp"

    # load heart model.
    model: models.FourChamber = models.FourChamber(models.ModelInfo(work_directory=workdir))
    model.load_model_from_mesh(path_to_model, path_to_model.replace(".vtu", ".partinfo.json"))
    model._extract_apex()
    model.compute_left_ventricle_anatomy_axis()
    model.compute_left_ventricle_aha17()

    # set base working directory
    model.info.workdir = str(workdir)


.. GENERATED FROM PYTHON SOURCE LINES 82-85

Instantiate the simulator object
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
instantiate simulator. Change options where necessary.

.. GENERATED FROM PYTHON SOURCE LINES 85-100

.. code-block:: default


    # instantiate dyna settings of choice
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path,
        dynatype="intelmpi",
        num_cpus=1,
    )


    simulator = BaseSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "simulation"),
    )


.. GENERATED FROM PYTHON SOURCE LINES 111-114

Compute UHC
~~~~~~~~~~~
Compute UHC using Laplace Dirichlet method.

.. GENERATED FROM PYTHON SOURCE LINES 114-117

.. code-block:: default


    simulator.compute_uhc()


.. GENERATED FROM PYTHON SOURCE LINES 118-123

.. note::
   There are several definitions for UHC (see https://github.com/KIT-IBT/Cobiveco).
   Here, a simple approach is taken and the
   Dirichlet conditions are shown below. At rotational direction, the start (pi), end (-pi)
   and middle (0) points are defined from four-cavity long axis cut view.

.. GENERATED FROM PYTHON SOURCE LINES 125-128

.. image:: /_static/images/uvc_bc.png
  :width: 600pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 130-134

Visualization of UVCs
~~~~~~~~~~~~~~~~~~~~~
UVC is assigned back to the full model automatically
Atrial points are padded with NaN's

.. GENERATED FROM PYTHON SOURCE LINES 134-147

.. code-block:: default


    plotter = pv.Plotter(shape=(1, 3))

    plotter.subplot(0, 0)
    plotter.add_mesh(simulator.model.mesh, scalars="apico-basal")

    plotter.subplot(0, 1)
    plotter.add_mesh(copy.copy(simulator.model.mesh), scalars="transmural")

    plotter.subplot(0, 2)
    plotter.add_mesh(copy.copy(simulator.model.mesh), scalars="rotational")
    plotter.show()


.. GENERATED FROM PYTHON SOURCE LINES 148-151

.. image:: /_static/images/uvc_result.png
  :width: 600pt
  :align: center


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.000 seconds)


.. _sphx_glr_download_examples_preprocessor_doc_example_uhc.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_example_uhc.py <doc_example_uhc.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_example_uhc.ipynb <doc_example_uhc.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
